// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profile actions should create an action for a failed profile load 1`] = `
Object {
  "type": "PROFILE_FAILURE",
}
`;

exports[`profile actions should create an action for a successful profile load 1`] = `
Object {
  "payload": "profile",
  "type": "PROFILE_SUCCESS",
}
`;

exports[`profile actions should create an action for profile fetch 1`] = `
Object {
  "type": "PROFILE_FETCHING",
}
`;

exports[`profile actions should create an action to load a profile 1`] = `
Object {
  "payload": Object {
    "member": 1,
  },
  "type": "PROFILE_PROFILE",
}
`;

exports[`profile actions should create an action to load the user's own profile as default 1`] = `
Object {
  "payload": Object {
    "member": "me",
  },
  "type": "PROFILE_PROFILE",
}
`;
